Added basic operations; suspected memory leak will be looked into.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ PROJECT(BigInteger)
 
 add_executable(
         BigInteger
-        src/BigInteger.cpp)
+        src/BigInteger.cpp src/Addition.cpp src/Subtraction.cpp src/Transformation.cpp src/Comparison.cpp src/Multiplication.cpp src/Division.cpp)
