Full String basic Completion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.17)
 PROJECT(BigInteger)
+set(CMAKE_CXX_FLAGS "-std=c++20")
+
+
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
 
 add_executable(
         BigInteger
-        src/BigInteger.cpp src/Addition.cpp src/Subtraction.cpp src/Transformation.cpp src/Comparison.cpp src/Multiplication.cpp src/Division.cpp)
+        src/BigInteger.cpp)
+message(${CONAN_LIBS})
+target_link_libraries(BigInteger ${CONAN_LIBS})
