--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
 project(BigInteger)
 
-set_property(GLOBAL PROPERTY CXX_STANDARD 20)
-
+set(CMAKE_CXX_STANDARD 20)
 add_executable(
         BigInteger
         src/BigInteger.cpp)
